--- a/style.css
+++ b/style.css
@@ -164,11 +164,12 @@
 }
 
 .player_name:disabled {
-
     pointer-events: none;
-
 }
 
+.history:disabled {
+    background-color: #888;
+}
 
 
 /* ********************************modals************************* */
